--- a/Pages/ThisBlog.cshtml
+++ b/Pages/ThisBlog.cshtml
@@ -2,7 +2,6 @@
 @model Blog.Pages.ThisBlogModel
 
 <div class="container">
-	<h1>Мой блог</h1>
 	<div id="blog-posts">
 		@if (Model.Blog != null)
 		{
@@ -33,6 +32,7 @@
 
 @{
 	ViewData["Title"] = "Мой блог";
+	Layout = "_Layout";
 }
 
 
